<resources>
    <string name="app_name">Exo1TP</string>
    <string name="TextView">Compteur de fruits</string>
    <string name="PommesRadio">Pommes</string>
    <string name="PoiresRadio">Poires</string>
    <string name="CompterButton">Compter</string>
    <string name="Pommesresult">0</string>
    <string name="PoiresResult">0</string>
    <string name="Pommes">Pommes=</string>
    <string name="Poires">Poires=</string>
</resources>
